Obtener ventas casi listo
